<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/appBackground"
        android:gravity="center"
        android:text="@string/crop"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <ImageView
        android:id="@+id/picture_cropped"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/paper"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:background="@color/colorBlack"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:srcCompat="@tools:sample/avatars" />

    <com.sample.edgedetection.view.PaperRectangle
        android:id="@+id/paper_rect"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorTransparent"
        android:layerType="software"
        app:layout_constraintBottom_toBottomOf="@+id/paper"
        app:layout_constraintStart_toStartOf="@id/paper"
        app:layout_constraintEnd_toEndOf="@id/paper"
        app:layout_constraintTop_toTopOf="@id/paper" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="0dip"
            android:layout_height="60dp"
            android:layout_weight=".5"
            android:background="@color/colorCancelBtnBackground"
            android:backgroundTint="@color/colorCancelBtnBackground"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/decisionBtn"
            android:layout_width="0dip"
            android:layout_height="60dp"
            android:layout_weight=".5"
            android:background="@color/colorMain"
            android:backgroundTint="@color/colorMain"
            android:text="@string/decision" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>